# EigenRiskCarSales

./: .gitattributes  CMakeLists.txt  README.md
data/: world_car_sales_1m.csv
include/: car_sales_processor.hpp  constants.hpp
src/: car_sales_processor.cpp  main.cpp
